...
    <string name="exit">Salir</string>
    <string name="title_activity_comidas2">activity_comidas2</string>
    <string name="maxipollo">Maxipollo</string>
    <string name="infoMaxipollo">Maxi Pollo es una empresa cien por ciento colombiana que se preocupa por innovar y ofrecer a los clientes variedad de alternativas de alimentación manteniendo siempre las premisas de servicio y calidad.</string>
    <string name="computacion_movil">Computación Móvil</string>
    <string name="infoCurso">Este curso está orientado a adquirir conocimientos en el desarrollo de aplicaciones para dispositivos móviles. Conocer las particularidades de los dispositivos móviles en su arquitectura de hardware y los sistemas operativos. Conocer conceptos básicos de programación de dispositivos móviles. Adquirir la capacidad de realizar proyectos de computación móvil.</string>
    <string name="register">Registrarse</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
...
